@@ -10,6 +10,7 @@
  * Add footer, and internal and expanded views for geo map. (#1264).
  * Support 'expanded' (much higher, full-width) jacks viewer and editor (#1233)
  * Support matching on sliver_id for exosm resources status (#1231)
+ * Add CloudLab button to home tools list (#1263)
 
 == 2.25 ==
  * Allow for editing RSpecs in the Profile Manage RSpecs page using Jacks
